# ProjetCHPS

./: .gitignore  CMakeLists.txt  Explo.cpp  Gen.cpp  Makefile  TDL.txt  ToDoList.txt  arbre.cpp  arbre.hpp  change_list.txt  color.cpp  color.hpp  load.cpp  load.hpp  main.cpp  main.hpp  mandelbrot.cpp  mandelbrot.hpp  matOp.cpp  matOp.hpp  mpmc.cpp  mpmc.hpp  perfTest.cpp  rdtsc.cpp  rdtsc.hpp  test_img.cpp  workHandler.cpp  workHandler.hpp
leaks/: leaks.txt  leaks2.txt  leaks3.txt  leaks4.txt  leaks5.txt  leaks6.txt
libppm/: Makefile  ppm.c  ppm.cpp  ppm.h  ppm.hpp  test.c
perf/: perf.txt  perf2.txt  perf_without_double.c
test distance estimator/: Makefile  main.cpp  test1.txt  test2.txt
